--- a/main.css
+++ b/main.css
@@ -8,12 +8,13 @@
     width: 100% ;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 .box2{
     margin-right: 10px;
 }
 .box3{
-    margin-right: 10px;
+    margin-right: 15px;
 }
 .box4{
     margin-right: 10px;
@@ -28,4 +29,41 @@ p{
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(0,#333,#ccc);
+}
+.menu{
+    display: flex;
+    align-items: center;
+}
+.btn{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+.btn:hover{
+    text-decoration: underline;
+    transition: .5s ease;
+}
+.btn-login{
+    color:#000;
+    background: transparent;
+    border-radius: 16px;
+    height: 40px;
+    width: 150px;
+}
+@keyframes wideout{
+    from{
+        background: linear-gradient(90deg,#333,#ccc);
+        opacity: 0;
+    }
+    to{
+        background: linear-gradient(-90deg,#333,#ccc);
+        opacity: 1;
+    }
+}
+.btn.btn-login:hover{
+    animation: wideout 1s ease-in-out;
+    background: linear-gradient(-90deg,#333,#ccc);
+    color: #fff;
+    transition: .5s all;
 }
